Add settings and initial sync code
