# swagger.json
@@ -88,7 +88,7 @@
       }
     },
     "/api/v1/admin/impersonate/{id}": {
-      "post": {
+      "get": {
         "description": "Gets an authentication token for an admin that allows scoping as a user",
         "tags": [
           "admin"
@@ -106,6 +106,64 @@
         "responses": {
           "200": {
             "$ref": "#/responses/tokenResponse"
+          },
+          "400": {
+            "$ref": "#/responses/errorResponse"
+          },
+          "401": {
+            "$ref": "#/responses/errorResponse"
+          },
+          "403": {
+            "$ref": "#/responses/errorResponse"
+          },
+          "422": {
+            "$ref": "#/responses/errorResponse"
+          },
+          "500": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      }
+    },
+    "/api/v1/admin/settings": {
+      "get": {
+        "tags": [
+          "admin"
+        ],
+        "summary": "Returns the current application settings.",
+        "operationId": "currentSettings",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/adminCurrentSettingsResponse"
+          },
+          "400": {
+            "$ref": "#/responses/errorResponse"
+          },
+          "401": {
+            "$ref": "#/responses/errorResponse"
+          },
+          "403": {
+            "$ref": "#/responses/errorResponse"
+          },
+          "422": {
+            "$ref": "#/responses/errorResponse"
+          },
+          "500": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      }
+    },
+    "/api/v1/admin/sync": {
+      "post": {
+        "tags": [
+          "admin"
+        ],
+        "summary": "Returns a google sheet reference.",
+        "operationId": "initializeSync",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/adminSyncSheetResponse"
           },
           "400": {
             "$ref": "#/responses/errorResponse"
@@ -483,6 +541,32 @@
         }
       }
     },
+    "Setting": {
+      "type": "object",
+      "title": "Setting is an object representing the database table.",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "sheet": {
+          "type": "string"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "SheetResponsePayload": {
+      "description": "SheetResponsePayload contains the synchronized Google sheet",
+      "type": "object",
+      "properties": {
+        "sheet": {
+          "type": "string"
+        }
+      }
+    },
     "TokenPayload": {
       "description": "TokenPayload contain the body parameters for a token exchange",
       "type": "object",
@@ -575,6 +659,12 @@
     }
   },
   "responses": {
+    "adminCurrentSettingsResponse": {
+      "description": "CurrentSettingsResponse returns a synchronized Google sheet",
+      "schema": {
+        "$ref": "#/definitions/Setting"
+      }
+    },
     "adminGroupResponse": {
       "description": "GroupResponse returns the queried zgroups",
       "schema": {
@@ -585,6 +675,12 @@
       "description": "GroupsResponse returns the queried groups",
       "schema": {
         "$ref": "#/definitions/GroupsResponsePayload"
+      }
+    },
+    "adminSyncSheetResponse": {
+      "description": "SheetResponse returns a synchronized Google sheet",
+      "schema": {
+        "$ref": "#/definitions/SheetResponsePayload"
       }
     },
     "adminUserResponse": {
